Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  rules:
  - host: "google.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ps-clusterip
            port:
              number: 80
  ingressClassName: nginx
