Ingress/ingress2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress2
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-rps: "1" # not working
spec:
  ingressClassName: nginx
  rules:
  - host: "rate-limit"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ps-clusterip
            port:
              number: 80
